# llm-eval-harness

./: .env.example  .gitignore  .replit  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: recruiter-demo.md
evals/: basic.json  release_gate.json
examples/: sample_report.md  sample_run.json
src/: make_report.py  run_eval.py  smoke_test.py  update_index.py
src/harness/: cli.py  judge.py  summary.py
src/llm_eval_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_grade.py  test_judge.py  test_packs.py  test_run_flow.py  test_summary.py
