[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-harness"
version = "0.0.1"
description = "Local LLM evaluation harness (LM Studio/OpenAI-compatible)"
requires-python = ">=3.10"
dependencies = ["openai>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
harness = "harness.cli:main"
