[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-harness"
version = "0.0.1"
description = "Tiny reproducible local-LLM eval harness for OpenAI-compatible APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai>=1.0.0"]
keywords = ["llm", "evaluation", "local-llm", "lm-studio", "openai-compatible"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
harness = "harness.cli:main"
